# td-etape3-devops

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/order_management/: order.py  status.py
tests/: test_order.py  test_status.py
